# attd-tracer-qbdi

./: .gitignore  CMakeLists.txt  library.cpp  readme.md
include/: attd.h  hookInfo.h  hookUtils.h  logger.h  recorderManager.h  stringCache.h  symbolResolver.h  textRecorder.h  traceRecord.h  utils.h  vm.h
src/: hookInfo.cpp  hookUtils.cpp  recorderManager.cpp  stringCache.cpp  symbolResolver.cpp  textRecorder.cpp  utils.cpp  vm.cpp
test/: test.cpp
